// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div tabindex="0" class="select-field">
  <div class="select-field__input select-field__input--open"><span class="select-field__input__label">
        Select an option
      </span> <span class="select-field__input__icon select-field__input__icon--open"><chevron-icon-stub></chevron-icon-stub></span></div>
  <popup-menu-stub seperatorindex="-1" class="popup-menu popup-menu-select-field popup-menu--open">
    <div class="popup-menu__wrapper">
      <div class="popup-menu__content">
        <list-element-v2-stub text="value 0" class="popup-menu__content__item"></list-element-v2-stub>
        <list-element-v2-stub text="value 1" class="popup-menu__content__item"></list-element-v2-stub>
        <list-element-v2-stub text="value 2" class="popup-menu__content__item"></list-element-v2-stub>
        <list-element-v2-stub text="value 3" class="popup-menu__content__item"></list-element-v2-stub>
      </div>
    </div>
  </popup-menu-stub>
</div>
`;

exports[`when has disabled prop matches snapshot with disabled 1`] = `
<div tabindex="0" class="select-field">
  <div class="select-field__input select-field__input--open select-field__input--disabled"><span class="select-field__input__label">
        Select an option
      </span> <span class="select-field__input__icon select-field__input__icon--open"><chevron-icon-stub></chevron-icon-stub></span></div>
  <popup-menu-stub seperatorindex="-1" class="popup-menu popup-menu-select-field popup-menu--open">
    <div class="popup-menu__wrapper">
      <div class="popup-menu__no-content">
        No item found
      </div>
    </div>
  </popup-menu-stub>
</div>
`;

exports[`when has empty prop matches snapshot with empty 1`] = `
<div tabindex="0" class="select-field">
  <div class="select-field__input select-field__input--open"><span class="select-field__input__label">
        Select an option
      </span> <span class="select-field__input__icon select-field__input__icon--open"><chevron-icon-stub></chevron-icon-stub></span></div>
  <popup-menu-stub seperatorindex="-1" class="popup-menu popup-menu-select-field popup-menu--open">
    <div class="popup-menu__wrapper">
      <div class="popup-menu__no-content">
        the dropdown is empty
      </div>
    </div>
  </popup-menu-stub>
</div>
`;

exports[`when has label prop matches snapshot with label 1`] = `
<div tabindex="0" class="select-field">
  <div class="select-field__input"><span class="select-field__input__label">
        label text
      </span> <span class="select-field__input__icon"><chevron-icon-stub></chevron-icon-stub></span></div>
  <!---->
</div>
`;

exports[`when has label prop show no popup menu if open equals false 1`] = `
<div tabindex="0" class="select-field">
  <div class="select-field__input"><span class="select-field__input__label">
        label text
      </span> <span class="select-field__input__icon"><chevron-icon-stub></chevron-icon-stub></span></div>
  <!---->
</div>
`;

exports[`when has label prop show popup menu if open equals true 1`] = `
<div tabindex="0" class="select-field">
  <div class="select-field__input"><span class="select-field__input__label">
        label text
      </span> <span class="select-field__input__icon"><chevron-icon-stub></chevron-icon-stub></span></div>
  <!---->
</div>
`;
